CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2004 by Bill Kendrick
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/


2004.May.13 (0.9.14) [cvs]
  * Fixed "--noprint=yes" not working under Windows and BeOS.
    Thanks to Adam Moore for pointing out this bug!
    Bill Kendrick & Mark K. Kim

  * Updated Makefile for easier install.
    Mark K. Kim <tuxNO_SOLICITATIONpaint-dev@cbreak.org>

  * Fixed crash bug when translated text ends in a space.
    Mark K. Kim & John Popplewell

  * Support for Belarusian.  [Not translated yet]
    Eugene Zelenko <greendeath@mail.ru>

  * Welsh translation created.
    Kevin Donnelly <kevin@dotmon.com>

  * Vietnamese translation created.  (Simple version)
    Le Quang Phan <lqphan@hn.vnn.vn>

  * Afrikaans translation created.
    Petri Jooste <rkwjpj@puk.ac.za>

  * Serbian translation created.
    Aleksandar Jelenak <jelenak@netlinkplus.net>

  * Slovenian translation created.
    Urska Colner <ursacol02@users.sourceforge.net>,
    Ines Kovacevic <ines@agenda.si>

  * Breton translation created.
    Korvigellou An Drouizig (Philippe) <drouizig@drouizig.org>

  * British english translation updates.
    Gareth Owen <gowen72@yahoo.com>

  * Japanese translation updates.
    TOYAMA Shin-ichi <shin1@wmail.plala.or.jp>

  * Dutch translation updates.
    Geert Stams <geertstams@wanadoo.nl>

  * French translation updates.
    Jacques Chion <Jacques.Chion@wanadoo.fr>

  * Italian language file (it.po) update.
    Flavio Pastor <flavio.pastore@zonaitalia.it>

  * Italian documentation translation.
    Flavio Pastor <flavio.pastore@zonaitalia.it>

  * Icelandic language file (is.po) update.
    Pjetur G. Hjaltason <pjetur@pjetur.net>

  * Norwegian Nynorsk language file (nn.po) update.
    Karl Ove Hufthammer <karl@huftis.org>

  * German language file (de.po) update.
    Roland Illig <roland.illig@gmx.de>

  * Walloon language file (wa.po) update.