@@ -6,7 +6,7 @@
 # bill@newbreedsoftware.com
 # http://www.newbreedsoftware.com/tuxpaint/
 
-# June 14, 2002 - May 9, 2004
+# June 14, 2002 - May 16, 2004
 
 
 # Where to install things:
@@ -222,6 +222,7 @@ uninstall:
 	-rm $(LOCALE_PREFIX)fi/LC_MESSAGES/tuxpaint.mo
 	-rm $(LOCALE_PREFIX)fr/LC_MESSAGES/tuxpaint.mo
 	-rm $(LOCALE_PREFIX)he/LC_MESSAGES/tuxpaint.mo
+	-rm $(LOCALE_PREFIX)hr/LC_MESSAGES/tuxpaint.mo
 	-rm $(LOCALE_PREFIX)hu/LC_MESSAGES/tuxpaint.mo
 	-rm $(LOCALE_PREFIX)id/LC_MESSAGES/tuxpaint.mo
 	-rm $(LOCALE_PREFIX)is/LC_MESSAGES/tuxpaint.mo
@@ -401,6 +402,11 @@ install-gettext:
 	@install -d $(LOCALE_PREFIX)zh_CN/LC_MESSAGES
 	@cp trans/zh_cn.mo $(LOCALE_PREFIX)zh_CN/LC_MESSAGES/tuxpaint.mo
 	@chmod 644 $(LOCALE_PREFIX)zh_CN/LC_MESSAGES/tuxpaint.mo
+	@#
+	@echo "   hr_HR ...Croatian..."
+	@install -d $(LOCALE_PREFIX)hr/LC_MESSAGES
+	@cp trans/hr.mo $(LOCALE_PREFIX)hr/LC_MESSAGES/tuxpaint.mo
+	@chmod 644 $(LOCALE_PREFIX)hr/LC_MESSAGES/tuxpaint.mo
 	@#
 	@echo "   cs_CZ ...Czech..."
 	@install -d $(LOCALE_PREFIX)cs/LC_MESSAGES
@@ -671,6 +677,7 @@ translations: trans \
 	trans/fi.mo \
 	trans/fr.mo \
 	trans/he.mo \
+	trans/hr.mo \
 	trans/hu.mo \
 	trans/id.mo \
 	trans/is.mo \
@@ -761,6 +768,10 @@ trans/fr.mo:	src/messages/fr.po
 trans/he.mo:	src/messages/he.po
 	@echo "   he_IL ...Hebrew..."
 	@msgfmt src/messages/he.po -o trans/he.mo
+
+trans/hr.mo:	src/messages/hr.po
+	@echo "   hr_HR ...Croatian..."
+	@msgfmt src/messages/hr.po -o trans/hr.mo
 
 trans/hu.mo:	src/messages/hu.po
 	@echo "   hu_HU ...Hungarian..."
