@@ -9,7 +9,7 @@
                            bill@newbreedsoftware.com
                    http://www.newbreedsoftware.com/tuxpaint/
 
-                          June 14, 2002 - May 9, 2004
+                          June 14, 2002 - May 16, 2004
 
      ----------------------------------------------------------------------
 
@@ -382,6 +382,8 @@ Options
                      |--------------------+------------------+---------|
                      |chinese             |                  |         |
                      |--------------------+------------------+---------|
+                     |croatian            |hrvatski          |         |
+                     |--------------------+------------------+---------|
                      |czech               |cesky             |         |
                      |--------------------+------------------+---------|
                      |danish              |dansk             |         |
@@ -611,6 +613,8 @@ Options
            |fr_FR@euro     |Franc,ais          |French              |
            |---------------+-------------------+--------------------|
            |he_IL (*)      |                   |Hebrew              |
+           |---------------+-------------------+--------------------|
+           |hr_HR          |Hrvatski           |Croatian            |
            |---------------+-------------------+--------------------|
            |hu_HU          |Magyar             |Hungarian           |
            |---------------+-------------------+--------------------|
