@@ -23,7 +23,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>June 14, 2002 - May 9, 2004</p>
+<p>June 14, 2002 - May 16, 2004</p>
 </center>
 
 <hr size=2 noshade>
@@ -514,6 +514,11 @@ New Breed Software</p>
 	    <td>&nbsp;</td>
 	  </tr>
 	  <tr>
+	    <td><code>croatian</code></td>
+	    <td><code>hrvatski</code></td>
+	    <td>&nbsp;</td>
+	  </tr>
+	  <tr>
 	    <td><code>czech</code></td>
 	    <td><code>cesky</code></td>
 	    <td>&nbsp;</td>
@@ -935,6 +940,11 @@ New Breed Software</p>
         <td><code>he_IL</code> (*)</td>
 	<td>&nbsp;</td>
 	<td>Hebrew</td>
+      </tr>
+      <tr>
+        <td><code>hr_HR</code></td>
+	<td>Hrvatski</td>
+	<td>Croatian</td>
       </tr>
       <tr>
         <td><code>hu_HU</code></td>
