@@ -1,5 +1,5 @@
-.\" tuxpaint.1 - 2004.05.09
-.TH TUXPAINT 1 "09 May 2004" "0.9.14" "Tux Paint"
+.\" tuxpaint.1 - 2004.05.16
+.TH TUXPAINT 1 "16 May 2004" "0.9.14" "Tux Paint"
 .SH NAME
 tuxpaint -- A drawing program for young children.
 
@@ -270,10 +270,13 @@ british | british-english
 catalan | catala
 .TP 2
 -
-czech | cesky
+chinese
 .TP 2
 -
-chinese
+croatian | hrvatski
+.TP 2
+-
+czech | cesky
 .TP 2
 -
 danish | dansk
@@ -461,6 +464,7 @@ Karl Ove Hufthammer,
 Roland Illig,
 Juan Irigoien,
 Dmitriy Ivanov,
+Nedjeljko Jedvaj,
 Aleksandar Jelenak,
 Rasmus Erik Voel Jensen,
 Wang Jian,
@@ -497,6 +501,7 @@ Eugene Zelenko.
 
 .SH "SEE ALSO"
 .BR tuxpaint-import (1),
+.BR tuxpaint-config (1),
 .BR xpaint (1),
 .BR gpaint (1),
 .BR gimp (1)
